# sing

./: .gitignore  Cargo.toml  README.md  inspect_mapping_errors.py  lib-old.rs  perf.data  perf.data.old  time
.github/workflows/: deploy.yml
scripts/: 1001-samplecount.sh  benchmark-all.sh  benchmark-gatk.sh  benchmark-install.sh  benchmark-minimap.sh  benchmark-strobe.sh  benchmark-syn.sh  benchmark.py  benchmark.sh  benchmark_strobe_mapper.sh  build-web.sh  download-1001.sh  gatk-sim.sh  genotype-venndiagram.sh  map-1001.sh
sing-browser/: Cargo.toml  index.html  index.js  worker.js
sing-browser/src/: wasm.rs
sing-cli/: Cargo.toml
sing-cli/src/: main.rs
sing-core/: Cargo.toml
sing-core/src/: lib.rs
sing-web/: Cargo.toml  index.html  index.js  worker.js
sing-web/pkg/: package.json  sing_web.d.ts  sing_web.js  sing_web_bg.wasm  sing_web_bg.wasm.d.ts
sing-web/src/: lib.rs  wasm.rs
