[package]
name = "sing-cli"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "sing"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
needletail = { version = "0.6", features = ["compression"] }
sing-core = { path = "../sing-core" }
